# iot-temperature-monitoring

./: README.md  Temperature_Monitoring.ino
server/: pyproject.toml
server/flaskr/: app.py  data.txt
server/flaskr/static/: script.js
server/flaskr/templates/: index.html
